# flux

./: FLUX_PLAN.md  README.md  docker-compose.yml  host_bridge.py  package-lock.json  package.json  setup.sh  start.sh
.github/workflows/: release.yml
resources/: docker-compose.yml  host_bridge.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Button.css  Button.tsx  Layout.css  Layout.tsx
src/screens/: AuthScreen.tsx  DockerScreen.tsx  HomeScreen.css  HomeScreen.tsx  LicenseScreen.tsx  ProviderScreen.tsx  RunningScreen.css  RunningScreen.tsx  Screen.css  SetupFlow.tsx  StartupScreen.tsx
